--- a/dev/templates/head.html
+++ b/dev/templates/head.html
@@ -2,9 +2,15 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#188de7">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <title>Сборка Markup</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="theme-color" content="#E58D35">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+    <title>MasterTao</title>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/hamburgers.css">
+    <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
