--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -1,8 +1,13 @@
-///fonts///
-$font-primary: "Open Sans";
-$font-secondary:  "monospace";
-$font-size: 16px;
-
 ///colors///
-$primary-color: #222;
-$secondary-color: #f00;
+$color-primary: #E58D35;
+$color-secondary: #89C249;
+$bg-primary:#282B38;
+$bg-secondary: #363A4D;
+$text-color: #fff;
+$container-padding: 15px;
+$container-mobile-padding: 20px;
+///fonts///
+$font-primary: "ProximaNova";
+$section-margin-lg: 100px;
+$section-margin: 60px;
+
