--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -1,4 +1,72 @@
 @media screen and (max-width: 1024px) {
-}
+    .header-nav {
 
+        flex-direction: column;
+        background-color: #363A4D;
+        position: absolute;
+        top: -510px;
+        left: 0;
+        padding: 48px 13px 58px 53px;
+        transition: 0.7s;
+        z-index: 1;
+
+        &__list {
+        flex-direction: column; 
+        align-items: center;
+        margin-bottom: 36px;
+        }
+
+    &.show {
+            top: 72px
+        }
+
+        .btn-primary {
+        padding: 22px 23px;
+        max-width: 295px;
+        width: 100%;
+        justify-content: center;
+        margin: 0 auto;
+        }
+    }
+    
+    .container {
+        padding-right: $container-mobile-padding;
+        padding-left: $container-mobile-padding;
+    }
+
+    .header {
+        padding: 18px 0 15px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            height: 72px;
+            background-color: $bg-primary;
+            z-index: 2;
+        }
+    }
+    .header-logo-link {
+        z-index: 2;
+    }
+
+    .header-logo-img {
+        max-width: 140px;
+    }
+
+
+    .header-list-link {
+        font-size: 24px;
+        line-height: 222%;
+        padding: 0;
+    }
+
+    .hamburger {
+        z-index: 2;
+    }
+
+
+}
 
