--- a/dev/sass/media/_media_max_width1199.scss
+++ b/dev/sass/media/_media_max_width1199.scss
@@ -1,2 +1,11 @@
 @media screen and (max-width: 1199px) {
+    .header-nav__list {
+        gap: 19px;
+    }
+
+    .header-list-link {
+        padding: 16px 7px 10px;
+    }
 }
+
+
